--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -8,7 +8,8 @@
     android:layout_margin="20dp"
     android:layout_marginEnd="30dp"
     app:cardCornerRadius="15dp"
-    app:cardElevation="10dp">
+    app:cardElevation="10dp"
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,41 +35,54 @@
             android:id="@+id/txtDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="4dp"
         >
         <TextView
             android:id="@+id/txtPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="23dp"
+            android:textSize="16dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginStart="70dp"/>
+            android:layout_marginStart="70dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/txtStock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="23dp"/>
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtId"
+            android:textSize="0dp"/>
     </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginStart="240dp"
-            android:layout_gravity="end">
+            android:layout_marginStart="120dp"
+            android:layout_gravity="start">
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_edit_24"/>
+                android:src="@drawable/ic_baseline_edit_24"
+                android:id="@+id/btnEdit"/>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_delete_24"/>
-        </LinearLayout>
-
+                android:src="@drawable/ic_baseline_delete_24"
+                android:id="@+id/btnDelete"/>
 
     </LinearLayout>
+    </LinearLayout>
+
 </androidx.cardview.widget.CardView>
 
