--- a/app/src/main/res/layout/item_customer.xml
+++ b/app/src/main/res/layout/item_customer.xml
@@ -46,15 +46,19 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txtName"/>
+            android:id="@+id/txtName"
+            android:textStyle="bold"
+            android:textSize="17dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txtEmail"/>
+            android:id="@+id/txtEmail"
+            android:textSize="14dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txtPhoneNumber"/>
+            android:id="@+id/txtPhoneNumber"
+            android:textSize="14dp"/>
     </LinearLayout>
 
     </LinearLayout>
