--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -7,6 +7,11 @@
     <item android:title="Customers"
         android:id="@+id/profile"
         android:icon="@drawable/ic_baseline_man_24"/>
+
+    <item android:title="Balances"
+        android:id="@+id/balance"
+        android:icon="@drawable/ic_baseline_add_24"/>
+
     <item android:title="Settings"
         android:id="@+id/settings"
         android:icon="@drawable/ic_baseline_settings_24"/>
