--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnAnu"
-            android:text="Annuel"
+            android:text="Annual"
             android:textStyle="bold"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             />
