--- a/app/src/main/res/layout/fragment_debt.xml
+++ b/app/src/main/res/layout/fragment_debt.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Home">
+    tools:context=".Debt">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,12 +32,7 @@
            />
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recyclerDebt"
-            tools:listitem="@layout/item_debt"/>
-
+        
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
